# Routes/actorRoute.js
@@ -1,11 +1,12 @@
 const actorRoute = require("express").Router()
 const actorController = require("../controllers/actorController")
+const { validateActor, validatePartialActor, handleValidation } = require("../utils/actorValidation")
 
 actorRoute.get('/', actorController.findAll)
 actorRoute.get('/:id', actorController.findById)
-actorRoute.post('/search', actorController.findByQuery)
-actorRoute.post('/', actorController.createActor)
-actorRoute.patch('/:id', actorController.updateActorById)
+actorRoute.post('/search', validatePartialActor, handleValidation, actorController.findByQuery)
+actorRoute.post('/', validateActor, handleValidation, actorController.createActor)
+actorRoute.patch('/:id', validatePartialActor, handleValidation, actorController.updateActorById)
 actorRoute.delete('/:id', actorController.deleteActorById)
 actorRoute.delete('/', actorController.deleteAll)
 
